--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,143 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab'); 
+
+* {
+  box-sizing: border-box;
+  font-family: 'Roboto Slab';
+}
+
+p {
+  margin: 0;
+}
+/* GENERIC STYLES*/
+.m-0 {
+  margin: 0;
+}
+
+.padding-x {
+  padding-left: 1.8rem ;
+  padding-right: 1.8rem ;
+}
+
+.padding-y {
+  padding-top: 1rem ;
+  padding-bottom: 1rem ;
+}
+
+.padding-default {
+  padding: 2rem 1.8rem;
+}
+
+.margin-y {
+  margin-top: 0.8rem;
+  margin-bottom: 0.8rem;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* HOME - popular works */
+.pw-container {
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.pw-info-container {
+  height: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.pw-title {
+  font-weight: 700;
+  font-size: 1.8em;
+  text-align: start;
+}
+.pw-principal-work {
+  position: relative;
+  display: grid;
+  grid-template-rows: repeat( 9, 1fr );
+  width: 100%;
+  height: 45vh;
 }
 
-.App-link {
-  color: #61dafb;
+.pw-principal-work > img {
+  width: 100%;
+  height: 100%;
+  grid-row: 1 / 10;
+  object-fit: cover;
+  z-index: -1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.img-partial-overlay {
+  position: absolute;
+  grid-row: 6 / 10;
+  height: 100%;
+  width: 100%;
+  background-color: #336efa;
+  opacity: 0.8;
+  z-index: 0;
+}
+
+.info-work {
+  position: absolute;
+  grid-row: 6 / 10;
+  height: 100%;
+  width: 100%;
+  padding: 0.5rem 1.8rem;
+}
+
+.info-work-title {
+  text-align: start;
+  color:#fff;
+  font-size: 1.3em;
+  font-weight: 600;
+  margin: 0.5rem 0;
+}
+
+.info-work-content {
+  text-align: start;
+  color:#fff;
+  opacity: 0.5;
+  font-size: 0.7em;
+  margin: 0.5rem 0;
+}
+
+.pw-other-work {
+  position: relative;
+  display: grid;
+  grid-template-rows: repeat( 9, 1fr );
+  width: 100%;
+  height: 45vh;
+  overflow: hidden;
+}
+
+.pw-other-work > img {
+  width: 100%;
+  height: 100%;
+  grid-row: 1 / 6;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.info-other-work {
+  grid-row: 6 span;
+  height: 100%;
+  width: 100%;
+}
+
+.info-other-work-title {
+  text-align: start;
+  font-size: 1.5em;
+  font-weight: 600;
+  margin: 0.5rem 0;
+}
+
+.info-other-work-content {
+  text-align: start;
+  opacity: 0.5;
+  font-size: 0.8em;
+  margin: 0.5rem 0;
+}
+
+/* FOR DEBUG */
+.boundary {
+  background-color: red;
 }
